# snowflake-connector-python

./: .clang-format  .coverage2.7rc  .coverage3.4rc  .coverage3.5rc  .coverage3.6rc  .coverage3.7rc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  ASYNC_CONNECT_IMPLEMENTATION.md  CLAUDE.md  CONTRIBUTING.md  DESCRIPTION.md  DESCRIPTION.rst  DESCRIPTION.rst.orig  Dockerfile  FORK_MANAGEMENT.md  Jenkinsfile  LICENSE.txt  MANIFEST.in  README.md  README.rst  SECURITY.md  __init__.py  appveyor.yml  arrow_context.py  arrow_iterator.pyx  arrow_result.pyx  auth.py  auth_by_plugin.py  auth_default.py  auth_idtoken.py  auth_keypair.py  auth_oauth.py  auth_okta.py  auth_webbrowser.py  azure_util.py  backport_makefile.py  build_reqs.txt  (+67 more)
---prompts---/token-cache-updated/: 00-INDEX-upd.md  07-connector-python-upd.md
.github/: CODEOWNERS  ISSUE_TEMPLATE.txt  dependabot.yml  pull_request_template.md  repo_meta.yaml  secret_scanning.yml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  BUG_REPORT.md  FEATURE-REQUEST.yml  FEATURE_REQUEST.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/actions/: README.md
.plan/: adr-314t-ci.md
.wiremock/: ca-cert.jks
benchmark/: .env.example  README.md  benchmark_large_results.py  benchmark_sync_vs_async.py  benchmark_unit_converter.py  requirements.txt  test_unit_converter.py
ci/: build_darwin.sh  build_docker.sh  build_inside_docker.sh  build_linux.sh  build_pyarrow.bat  build_pyarrow_darwin.sh  build_windows.bat  change_snowflake_test_pwd.py  check_no_native_http.py  conda.sh  download_minicore.py  enc.sh  generate_full_matrix.py  install.bat  install.sh  log_analyze_setup.sh  run_appveyor.bat  set_base_image.sh  setup_gpg_home.sh  svnrevision.sh  test.bat  test.sh  test_authentication.sh  test_buildkite.sh  test_darwin.sh  test_docker.sh  test_fips.sh  test_fips_docker.sh  test_lambda.sh  test_lambda_docker.sh  test_linux.sh  test_revocation.sh  test_rockylinux9.sh  test_rockylinux9_docker.sh  test_wif.sh  test_windows.bat  wss.sh
ci/anaconda/: Dockerfile  (+6 more)
cpp/: CMakeLists.txt  PathUtil.cmake
cpp/ArrowIterator/: BinaryConverter.cpp  BinaryConverter.hpp  BooleanConverter.cpp  BooleanConverter.hpp  CArrowChunkIterator.cpp  CArrowChunkIterator.hpp  CArrowIterator.cpp  CArrowIterator.hpp  CArrowTableIterator.cpp  CArrowTableIterator.hpp  DateConverter.cpp  DateConverter.hpp  DecimalConverter.cpp  DecimalConverter.hpp  FloatConverter.cpp  FloatConverter.hpp  IColumnConverter.hpp  IntConverter.cpp  IntConverter.hpp  PyArrowChunkIteratorDef.cpp  SnowflakeType.cpp  SnowflakeType.hpp  StringConverter.cpp  StringConverter.hpp  TimeConverter.cpp  TimeConverter.hpp  TimeStampConverter.cpp  TimeStampConverter.hpp
cpp/ArrowIterator/Python/: Common.cpp  Common.hpp  Helpers.cpp  Helpers.hpp
cpp/ArrowIterator/Util/: time.cpp  time.hpp
cpp/Logging/: logging.cpp  logging.hpp
examples/: async_example.py  async_keypair_example.py
notebooks/: README.md  snowflake-dask.ipynb  snowflake-env.yml  snowflake-pandas.ipynb
prober/: Dockerfile  Dockerfile_min  Jenkinsfile.groovy  entrypoint.sh  setup.py  testing_matrix.json  version_generator.py
recipe/: conda_build_config.yaml  meta.yaml
samples/: README.md  auth_by_key_pair_from_file.py
scripts/: build.sh  build_connector_linux.sh  build_docker.sh  build_init.sh  build_inside_docker.sh  build_linux.sh  build_pyarrow.bat  build_pyarrow_darwin.sh  build_pyarrow_linux.sh  conda_init.sh  install.bat  install.bat.orig  install.bat.rej  install.sh  py_exec.sh  run_travis.sh  setenv_python.sh  test.bat  test.sh  test_darwin.sh  test_init.sh  upload.sh  upload_init.sh  upload_sqlalchemy.sh
stress/: util.py
test/: .gitignore  README.md  README.rst  __init__.py  complete_logging.txt  conftest.py  csp_helpers.py  generate_test_files.py  helpers.py  integ_helpers.py  lazy_var.py  mock_util.py  randomize.py  reproduce_script.py  test_arrow_pandas.py  test_arrow_result.py  test_async.py  test_autocommit.py  test_bindings.py  test_boolean.py  test_client_session_keep_alive.py  test_concurrent_create_objects.py  test_concurrent_insert.py  test_concurrent_multi_users.py  test_connection.py  test_connection.py.rej  test_connection_manual.py  test_connection_sso_manual.py  test_converter.py  test_converter_more_timestamp.py  test_converter_null.py  test_cursor.py  test_cursor_binding.py  test_cursor_context_manager.py  test_dataintegrity.py  test_daylight_savings.py  test_dbapi.py  test_encryption.py  test_errors.py  test_execute_multi_statements.py  (+54 more)
tested_requirements/: README.md  README.rst  requirements_310.reqs  requirements_311.reqs  requirements_312.reqs  requirements_313.reqs  requirements_314.reqs  requirements_35.reqs  requirements_35.txt  requirements_36.reqs  requirements_36.txt  requirements_37.reqs  requirements_37.txt  requirements_38-linux_x86_64.whl.reqs.txt  requirements_38.reqs  requirements_38.txt  requirements_39.reqs
testing-repro/: bypass_test.py  parameters.json.example  put_repro.py  run_repro.sh
tool/: dump_certs.py  dump_ocsp_response.py  dump_ocsp_response_cache.py  export_certs.py  poc_asn1crypto.py  probe_connection.py
wheels/: snowflake_connector_python-3.1.0a1-cp310-cp310-macosx_10_14_x86_64.whl  snowflake_connector_python-3.1.0a1-cp310-cp310-macosx_11_0_arm64.whl  snowflake_connector_python-3.1.0a1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  snowflake_connector_python-3.1.0a1-cp311-cp311-macosx_10_14_x86_64.whl  snowflake_connector_python-3.1.0a1-cp311-cp311-macosx_11_0_arm64.whl  snowflake_connector_python-3.1.0a1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  snowflake_connector_python-3.1.0a1-cp38-cp38-macosx_10_14_x86_64.whl  snowflake_connector_python-3.1.0a1-cp38-cp38-macosx_11_0_arm64.whl  snowflake_connector_python-3.1.0a1-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  snowflake_connector_python-3.1.0a1-cp39-cp39-macosx_10_14_x86_64.whl  snowflake_connector_python-3.1.0a1-cp39-cp39-macosx_11_0_arm64.whl  snowflake_connector_python-3.1.0a1-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
(+972 files in other folders)
