[build-system]
requires = [
    # The minimum setuptools version is specific to the PEP 517 backend,
    # and may be stricter than the version required in `setup.py`
    "setuptools>=40.6.0",
    "wheel",
    "cython",
]

[tool.cibuildwheel]
test-skip = "*"
manylinux-x86_64-image = "manylinux2014"
environment = {AUDITWHEEL_PLAT="manylinux2014_$(uname -m)"}
build-verbosity = 1

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
# Exclude pre-built minicore libraries from auditwheel repair
repair-wheel-command = ""

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
# Don't repair macOS wheels
repair-wheel-command = ""

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.check-manifest]
# Prebuilt minicore binaries live in git for every supported platform so
# wheel CI can consume them directly. setup.py's HostOnlyMinicoreSdist
# strips foreign-arch subdirs from the sdist. Tell check-manifest not to
# flag the resulting asymmetry between the git tree and the sdist tarball.
ignore = ["src/snowflake/connector/minicore/**"]
ignore-bad-ideas = ["src/snowflake/connector/minicore/**"]
