[metadata]
name = snowflake-connector-python
description = Snowflake Connector for Python
long_description = file: DESCRIPTION.md
long_description_content_type = text/markdown
url = https://www.snowflake.com/
author = Snowflake, Inc
author_email = triage-snowpark-python-api-dl@snowflake.com
license = Apache-2.0
license_files = LICENSE.txt, NOTICE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: SQL
    Topic :: Database
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords = Snowflake db database cloud analytics warehouse
project_urls =
    Documentation=https://docs.snowflake.com/en/user-guide/python-connector.html
    Source=https://github.com/snowflakedb/snowflake-connector-python
    Issues=https://github.com/snowflakedb/snowflake-connector-python/issues
    Changelog=https://github.com/snowflakedb/snowflake-connector-python/blob/main/DESCRIPTION.md

[options]
python_requires = >=3.7
packages = find_namespace:
install_requires =
    asn1crypto>0.24.0,<2.0.0
    cffi>=1.9,<2.0.0
    cryptography>=3.1.0,<37.0.0
    oscrypto<2.0.0
    pyOpenSSL>=16.2.0,<23.0.0
    pycryptodomex!=3.5.0,>=3.2,<4.0.0
    pyjwt<3.0.0
    pytz
    requests<3.0.0
    setuptools>34.0.0
    charset_normalizer>=2,<3
    idna>=2.5,<4
    urllib3>=1.21.1,<1.27
    certifi>=2017.4.17
    typing_extensions>=4.3,<5
    filelock>=3.5,<4
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src
exclude = snowflake.connector.cpp*
include = snowflake.*

[options.entry_points]
console_scripts =
    snowflake-dump-ocsp-response = snowflake.connector.tool.dump_ocsp_response:main
    snowflake-dump-ocsp-response-cache = snowflake.connector.tool.dump_ocsp_response_cache:main
    snowflake-dump-certs = snowflake.connector.tool.dump_certs:main
    snowflake-export-certs = snowflake.connector.tool.export_certs:main

[options.extras_require]
development =
    Cython
    coverage
    more-itertools
    numpy<1.24.0
    pendulum!=2.1.1
    pexpect
    pytest<7.2.0
    pytest-cov
    pytest-rerunfailures
    pytest-timeout
    pytest-xdist
    pytzdata
pandas =
    pandas>=1.0.0,<1.5.0
    pyarrow>=8.0.0,<8.1.0
secure-local-storage =
    keyring!=16.1.0,<24.0.0
